[tool.poetry]
name = "ppci-sandbox"
version = "0.1.0"
description = ""
authors = ["Stefane Fermigier <sf@abilian.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ppci = "^0.5.8"
devtools = "^0.8.0"
rich = "^10.11.0"
doit = "^0.33.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
